# PSXFunkinPlus

./: .gitignore  COMPILE.md  Commands.md  Makefile  Makefile.assets  Makefile.chr  Makefile.cht  Makefile.mus  Makefile.tim  Makefile.tools  Makefile.vag  Makefile.xa  Makefile.xax  NIGHTMARE_CUPHEAD2.TIM  README.md  config.json  funkin.xml  message.txt
.github/workflows/: build.yml
CEconfig/: template.c  template_player.c  template_player.h
archived/: nightmarecupbg.pdn
archived/mus/: audio.c  audio.h
guide/: COMPILE.md  MODDING.md
iso/characters/: icons.png.txt
iso/chart/: armageddon.json  bopeebo-easy.json  bopeebo-hard.json  bopeebo.json
iso/images/: hud0.png.txt  intro.png.txt
iso/music/: freakymenu.ogg.sfk  menu.xa.txt  testweek.xa.txt
iso/songs/: 1.xa.txt  2.xa.txt  3.xa.txt  bonus2.xa.txt  cycles.xa.txt  week1b.xa.txt  week3a.xa.txt
iso/sounds/: gameOverEnd.wav.vag  scream.wav.vag
src/: audio.h  audio_def.h  character.c  character.h  gfx.h  loadscr.c  main.c  menu.c  menu.h  mutil.c  mutil.h  songs.h  stage.c  stage.h  stagedef_disc1.h
src/character/: bf.c  cuphead.c  cuphead.h  dad.c  gf.c  goon.c  mighty.c  mighty.h  tricky.c
src/events/: event.c  event.h
src/fonts/: font.c  font.h
src/menu/: menu.c
src/object/: combo.c
src/psx/: audio.c  audio.h  audio_def.h  gfx.c  gfx.h  io.c  loadscr.c  mutil.c  mutil.h  psx.h  save.c  save.h  timer.c  timer.h
src/stage/: character.c  stage.c  (+2 more)
tools/: CMakeLists.txt
tools/funkinchartpak/: funkinchartpak.cpp
tools/funkinchrpak/: funkinchrpak.cpp
tools/psxavenc/: decoding.c  psxavenc.c
(+174 files in other folders)
